--- a/GarphIt.web/_Imports.razor
+++ b/GarphIt.web/_Imports.razor
@@ -8,5 +8,6 @@
 @using GraphIt.web
 @using GraphIt.web.Shared
 @using GraphIt.models
-@using Blazor.Extensions.Canvas
 @using Syncfusion.Blazor.Inputs
+@using Syncfusion.Blazor.Navigations
+@using Syncfusion.Blazor.Navigations.Internal
