--- a/GarphIt.web/Pages/Design.razor
+++ b/GarphIt.web/Pages/Design.razor
@@ -2,16 +2,33 @@
  
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
     <div class="col">
-            <form class="form-inline">
-                <h3>Node:</h3>
-                <label for="radius">Radius</label>
-                <input type="number" class="short-input" id="radius" @bind="DefaultDesign.NodeRadius">
-                
-                <label for="nc">Color</label>
-                <SfColorPicker Value="@DefaultDesign.NodeColor" ValueChange='(args => OnColorChange(args, "node") )' ID="nc"></SfColorPicker>
+        <form class="form-inline">
+            <h4>Default Node:</h4>
+            <label for="radius">Radius</label>
+            <input type="number" class="short-input" id="radius" @bind="DefaultDesign.NodeRadius">
 
-                <label for="lc">Label Color</label>
-                <SfColorPicker Value="@DefaultDesign.NodeLabelColor" ValueChange='(args => OnColorChange(args, "nodeLabel") )' ID="lc"></SfColorPicker>
-            </form>
+            <label for="nc">Color</label>
+            <SfColorPicker Value="@DefaultDesign.NodeColor" ValueChange='(args => OnColorChange(args, "node") )' ID="nc"></SfColorPicker>
+
+            <label for="lc">Label Color</label>
+            <SfColorPicker Value="@DefaultDesign.NodeLabelColor" ValueChange='(args => OnColorChange(args, "nodeLabel") )' ID="lc"></SfColorPicker>
+        </form>
+        @if (ActiveNode != null)
+        {
+    <form class="form-inline">
+        <h4>Current Node:</h4>
+        <label for="radius2">Radius</label>
+        <input type="number" class="short-input" id="radius2" value="@ActiveNode.Radius" @onchange="OnRadiusChange">
+
+        <label for="nc2">Color</label>
+        <SfColorPicker Value="@ActiveNode.NodeColor" ValueChange="OnNodeColorChange" ID="nc2"></SfColorPicker>
+
+        <label for="label">Label</label>
+        <input type="text" class="short-input" id="label" value="@ActiveNode.Label" @onchange="OnNodeLabelChange">
+
+        <label for="lc2">Label Color</label>
+        <SfColorPicker Value="@ActiveNode.LabelColor" ValueChange="OnNodeLabelColorChange" ID="lc2"></SfColorPicker>
+    </form>
+        }
     </div>
 </nav>
