--- a/GarphIt.web/Pages/Design.razor
+++ b/GarphIt.web/Pages/Design.razor
@@ -1,34 +1,40 @@
 ﻿@inherits DesignBase
  
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-    <div class="col">
-        <form class="form-inline">
-            <h4>Default Node:</h4>
-            <label for="radius">Radius</label>
-            <input type="number" class="short-input" id="radius" @bind="DefaultDesign.NodeRadius">
-
-            <label for="nc">Color</label>
-            <SfColorPicker Value="@DefaultDesign.NodeColor" ValueChange='(args => OnColorChange(args, "node") )' ID="nc"></SfColorPicker>
-
-            <label for="lc">Label Color</label>
-            <SfColorPicker Value="@DefaultDesign.NodeLabelColor" ValueChange='(args => OnColorChange(args, "nodeLabel") )' ID="lc"></SfColorPicker>
-        </form>
+    <div class="text-center col-md-6 border-right border-dark">
+        <div class="d-md-flex flex-row">
+            <div class="font-weight-bold text-left">
+                Default Node:
+            </div>
+            <div class="px-2">
+                Radius <SfNumericTextBox TValue="int?" Value="@DefaultDesign.NodeRadius" CssClass="radius"
+                                         Min=5 Max=999 Step=1 Format="###" @onchange="((e) => OnDefRadiusChange(e))"></SfNumericTextBox>
+            </div>
+            <div class="px-2">
+                Color <SfColorPicker Value="@DefaultDesign.NodeColor" ValueChange="OnDefNodeColorChange"></SfColorPicker>
+            </div>
+            <div class="px-2">
+                Label <SfColorPicker Value="@DefaultDesign.NodeLabelColor" ValueChange="OnDefNodeLabelColorChange"></SfColorPicker>
+            </div>
+        </div>
         @if (ActiveNode != null)
         {
-    <form class="form-inline">
-        <h4>Current Node:</h4>
-        <label for="radius2">Radius</label>
-        <input type="number" class="short-input" id="radius2" value="@ActiveNode.Radius" @onchange="OnRadiusChange">
-
-        <label for="nc2">Color</label>
-        <SfColorPicker Value="@ActiveNode.NodeColor" ValueChange="OnNodeColorChange" ID="nc2"></SfColorPicker>
-
-        <label for="label">Label</label>
-        <input type="text" class="short-input" id="label" value="@ActiveNode.Label" @onchange="OnNodeLabelChange">
-
-        <label for="lc2">Label Color</label>
-        <SfColorPicker Value="@ActiveNode.LabelColor" ValueChange="OnNodeLabelColorChange" ID="lc2"></SfColorPicker>
-    </form>
+            <div class="d-md-flex flex-row">
+                <div class="font-weight-bold text-left">
+                    Current Node:
+                </div>
+                <div class="px-2">
+                    Radius <SfNumericTextBox TValue="int?" Value="@ActiveNode.Radius" Min=5 Max=999 Step=1 Format="###" CssClass="radius"
+                  Placeholder="Radius" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
+                </div>
+                <div class="px-2">
+                    Color <SfColorPicker Value="@ActiveNode.NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
+                </div>
+                <div class="px-2">
+                    Label <SfTextBox CssClass="radius" ValueChange="OnNodeLabelChange"></SfTextBox> 
+                          <SfColorPicker Value="@ActiveNode.LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
+                </div>
+            </div>
         }
     </div>
 </nav>
