--- a/GarphIt.web/Pages/NodeCircle.razor
+++ b/GarphIt.web/Pages/NodeCircle.razor
@@ -2,7 +2,7 @@
 
 <g class="pointer"
    id="@Node.NodeId"
-   @onmouseup="OnMouseUp">
+   @onmousedown="OnMouseDown">
     <circle cx="@Node.Xaxis"
             cy="@Node.Yaxis"
             r="@Node.Radius"
