--- a/GarphIt.web/Pages/_Host.cshtml
+++ b/GarphIt.web/Pages/_Host.cshtml
@@ -32,7 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.server.js"></script>
-    <script src="_content/Blazor.ContextMenu/blazorContextMenu.min.js"></script>
+    <script src="_content/BlazorPro.BlazorSize/blazorSize.min.js"></script>
     <script src="js/helper.js"></script>
 </body>
 </html>
