--- a/GarphIt.web/_Imports.razor
+++ b/GarphIt.web/_Imports.razor
@@ -9,5 +9,8 @@
 @using GraphIt.web.Shared
 @using GraphIt.models
 @using Syncfusion.Blazor.Inputs
+@using Syncfusion.Blazor.Buttons
+@using Syncfusion.Blazor.Popups 
 @using Syncfusion.Blazor.Navigations
 @using Syncfusion.Blazor.Navigations.Internal
+@using BlazorPro.BlazorSize 
