--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -30,15 +30,7 @@
             </nav>
             break;
         case NavChoice.Insert:
-            <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-                <div class="collapse navbar-collapse mx-0" id="navbarNav">
-                    <ul class="navbar-nav mx-0">
-                        <li class="nav-item">
-                            <button type="button" class="btn">Save</button>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            <Insert @bind-InsertNode="InsertNode"></Insert>
             break;
         case NavChoice.Design:
             <Design @bind-ActiveNode="ActiveNode" @bind-DefaultDesign="DefaultDesign"></Design>
@@ -57,4 +49,8 @@
     }
 }
 
-<Canvas @bind-ActiveNode="ActiveNode" ChangeMenu="UpdateChoice" DefaultDesign="DefaultDesign"></Canvas>
+<Canvas @bind-ActiveNode="ActiveNode" ChangeMenu="UpdateChoice" DefaultDesign="DefaultDesign" InsertNode="InsertNode"></Canvas>
+@if (InitialModal)
+{
+    <InitialModal GraphType="GraphType" OnClose="OnInitialClose"></InitialModal>
+}
