--- a/GarphIt.web/Pages/Insert.razor
+++ b/GarphIt.web/Pages/Insert.razor
@@ -2,11 +2,19 @@
 
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
     <div class="d-inline-flex">
-        <div>
-            <SfCheckBox TChecked="bool" Label="Node" Value="InsertNode" @onchange="(e => UpdateInsertNode(e))" EnableRtl="true"></SfCheckBox>
+        <div class="px-2">
+            Node
+            <label class="switch">
+                <input type="checkbox" value="InsertNode" @onchange="UpdateInsertNode">
+                <span class="slider round"></span>
+            </label>
         </div>
-        <div>
+        <div class="px-2">
             Edge
+            <label class="switch">
+                <input type="checkbox">
+                <span class="slider round"></span>
+            </label>
         </div>
     </div>
 </nav>
