--- a/GarphIt.web/Pages/Insert.razor
+++ b/GarphIt.web/Pages/Insert.razor
@@ -12,7 +12,7 @@
         <div class="px-2">
             Edge
             <label class="switch">
-                <input type="checkbox">
+                <input type="checkbox" value="InsertEdge" @onchange="UpdateInsertEdge">
                 <span class="slider round"></span>
             </label>
         </div>
