--- a/GarphIt.web/wwwroot/css/site.css
+++ b/GarphIt.web/wwwroot/css/site.css
@@ -58,6 +58,9 @@ svg {
     cursor: grabbing;
 }
 
+.alias {
+    cursor: alias;
+}
 svg text {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -90,6 +93,14 @@ svg text {
     border-top: 2px solid black;
 }
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    color: black;
+    background-color: #D0CECE;
+    width: 100%
+}
 /* The switch - the box around the slider */
 .switch {
     position: relative;
@@ -98,12 +109,12 @@ svg text {
     height: 34px;
 }
 
-    /* Hide default HTML checkbox */
-    .switch input {
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
 
 /* The slider */
 .slider {
