--- a/GarphIt.web/Pages/Insert.razor
+++ b/GarphIt.web/Pages/Insert.razor
@@ -6,7 +6,7 @@
             <SfCheckBox TChecked="bool" Label="Nodes" @onclick="UpdateInsertNode" Checked="InsertNode">Nodes</SfCheckBox>
         </div>
         <div class="px-2">
-            <SfCheckBox TChecked="bool" Label="Nodes" @onclick="UpdateInsertEdge" Checked="InsertEdge">Edges</SfCheckBox>
+            <SfCheckBox TChecked="bool" Label="Edges" @onclick="UpdateInsertEdge" Checked="InsertEdge">Edges</SfCheckBox>
         </div>
     </div>
 </nav>
