--- a/GarphIt.web/Pages/Design.razor
+++ b/GarphIt.web/Pages/Design.razor
@@ -2,7 +2,7 @@
  
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
     <div class="text-center col-md-6 border-right border-dark">
-        <div class="d-md-flex flex-row">
+        <div class="d-flex flex-row">
             <div class="font-weight-bold text-left">
                 Default Node:
             </div>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="px-2">
                     Radius <SfNumericTextBox TValue="int?" Value="@ActiveNode.Radius" Min=10 Max=100 Step=1 Format="###" CssClass="radius"
-                  Placeholder="Radius" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
+                                             Placeholder="Radius" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
                 </div>
                 <div class="px-2">
                     Color <SfColorPicker Value="@ActiveNode.NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
@@ -41,6 +41,50 @@
                         <SfTextBox CssClass="radius" ValueChange="OnNodeLabelChange" Value="@ActiveNode.Label"></SfTextBox>
                     }
                     <SfColorPicker Value="@ActiveNode.LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
+                </div>
+            </div>
+        }
+    </div>
+    <div class="text-center col-md-6">
+        <div class="d-md-flex flex-row">
+            <div class="font-weight-bold text-left">
+                Default Edge:
+            </div>
+            <div class="px-2">
+                Width <SfNumericTextBox Value="@DefaultDesign.EdgeWidth" Min=1 Max=10 Step=0.1 CssClass="radius"
+                                         Format="##.#" @onchange="((e) => OnDefWidthChange(e))"></SfNumericTextBox>
+            </div>
+            <div class="px-2">
+                Color <SfColorPicker Value="@DefaultDesign.EdgeColor" ValueChange="OnDefEdgeColorChange"></SfColorPicker>
+            </div>
+            <div class="px-2">
+                Label <SfColorPicker Value="@DefaultDesign.EdgeLabelColor" ValueChange="OnDefEdgeLabelColorChange"></SfColorPicker>
+            </div>
+        </div>
+        @if (ActiveEdge != null)
+        {
+            <div class="d-md-flex flex-row">
+                <div class="font-weight-bold text-left">
+                    Current Edge:
+                </div>
+                <div class="px-2">
+                    Width <SfNumericTextBox Value="@ActiveEdge.Width" Min=1 Max=10 Step=0.1 CssClass="radius"
+                                             Format="##.#" Placeholder="Width" @onchange="((e) => OnWidthChange(e))"></SfNumericTextBox>
+                </div>
+                <div class="px-2">
+                    Color <SfColorPicker Value="@ActiveEdge.EdgeColor" ValueChange="OnEdgeColorChange"></SfColorPicker>
+                </div>
+                <div class="px-2">
+                    Label
+                    @if (ActiveEdge.Label == null || ActiveEdge.Label == "")
+                    {
+                        <SfTextBox CssClass="radius" ValueChange="OnEdgeLabelChange" Value="@(ActiveEdge.Weight.ToString())"></SfTextBox>
+                    }
+                    else
+                    {
+                        <SfTextBox CssClass="radius" ValueChange="OnEdgeLabelChange" Value="@ActiveEdge.Label"></SfTextBox>
+                    }
+                    <SfColorPicker Value="@ActiveEdge.LabelColor" ValueChange="OnEdgeLabelColorChange"></SfColorPicker>
                 </div>
             </div>
         }
