--- a/GarphIt.web/Pages/Footer.razor
+++ b/GarphIt.web/Pages/Footer.razor
@@ -1,14 +1,12 @@
-﻿<div class="footer d-flex flex-row py-0 my-0">
+﻿@inherits FooterBase
+<div class="footer d-flex flex-row py-0 my-0">
     <div class="px-2">
-        Nodes: 7
+        Nodes: @NodeCount
     </div>
     <div class="px-2">
-        Edges: 7
+        Edges: @EdgeCount
     </div>
     <div class="px-2">
-        Mode: Default
-    </div>
-    <div class="mr-auto px-2">
-        Zoom slider here
+        Mode: @GraphMode
     </div>
 </div>
