--- a/GarphIt.web/Pages/_Host.cshtml
+++ b/GarphIt.web/Pages/_Host.cshtml
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GraphIt.web</title>
-    <base href="~/" />
+    <base href="https://localhost:44367/" />
     <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
