removed design from navbar to node and edge options

--- a/GarphIt.web/Pages/Canvas.razor
+++ b/GarphIt.web/Pages/Canvas.razor
@@ -19,7 +19,7 @@
         {
             foreach (Edge edge in Edges)
             {
-                <EdgeLine Edge="edge" ActiveNode="ActiveNode" ActiveEdge="ActiveEdge" OnEdgeClick="OnEdgeClick" OnEdgeRightClick="OnEdgeRightClick" GraphType="GraphType"></EdgeLine>
+                <EdgeLine Edge="edge" ActiveNode="ActiveNode" ActiveEdge="ActiveEdge" OnEdgeClick="OnEdgeClick" OnEdgeRightClick="OnEdgeRightClick" DefaultOptions="DefaultOptions"></EdgeLine>
             }
         }
         foreach (Node node in Nodes)
