--- a/GarphIt.web/Pages/NavBar.razor
+++ b/GarphIt.web/Pages/NavBar.razor
@@ -10,14 +10,14 @@
             <li class="nav-item @NavElements[(int)NavChoice.File]" @onclick="(() => Click(NavChoice.File))">
                 <button type="button" class="btn shadow-none">File</button>
             </li>
-            <li class="nav-item @NavElements[(int)NavChoice.Home]" @onclick="(() => Click(NavChoice.Home))">
-                <button type="button" class="btn shadow-none">Home</button>
-            </li>
             <li class="nav-item @NavElements[(int)NavChoice.Insert]" @onclick="(() => Click(NavChoice.Insert))">
                 <button type="button" class="btn shadow-none">Insert</button>
             </li>
-            <li class="nav-item @NavElements[(int)NavChoice.Design]" @onclick="(() => Click(NavChoice.Design))">
-                <button type="button" class="btn shadow-none">Design</button>
+            <li class="nav-item @NavElements[(int)NavChoice.Node]" @onclick="(() => Click(NavChoice.Node))">
+                <button type="button" class="btn shadow-none">Node</button>
+            </li>
+            <li class="nav-item @NavElements[(int)NavChoice.Edge]" @onclick="(() => Click(NavChoice.Edge))">
+                <button type="button" class="btn shadow-none">Edge</button>
             </li>
             <li class="nav-item @NavElements[(int)NavChoice.About]" @onclick="(() => Click(NavChoice.About))">
                 <button type="button" class="btn shadow-none">About</button>
